--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
 	<div class="title">支援艦隊</div>
 	<div class="flex_space"></div>
 	<div>
-		<button id="output_deck_dialog">データ変換</button>
+		<button id="input_deck_dialog">データ入力</button>
+		<div class="hint">支援艦隊の編成データ入力ダイアログを開きます</div>
+	</div>
+	<div>
+		<button id="output_deck_dialog">データ出力</button>
 		<div class="hint">デッキビルダー形式のデータ出力ダイアログを開きます</div>
 	</div>
 </div>
