～2024/04/10アプデまで

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
 	<div class="update">
 		<div id="csv_update"></div>
 		<!-- TODO: 更新履歴 -->
+		<div class="date">2024/06/24</div>
+		<div class="text">
+			<p>2024/06/23までの艦娘・装備データに対応</p>
+			<p>2024/04/10までの装備ボーナスデータに対応</p>
+		</div>
 		<div class="date">2024/02/13</div>
 		<div class="text">
 			<p>2024/02/13までのデータを更新</p>
