~2024/12/08 艦娘と装備のみ

--- a/index.html
+++ b/index.html
@@ -282,6 +282,10 @@
 	<div class="update">
 		<div id="csv_update"></div>
 		<!-- TODO: 更新履歴 -->
+		<div class="date">2024/12/08</div>
+		<div class="text">
+			<p>2024/12/08までの艦娘・装備データ追加</p>
+		</div>
 		<div class="date">2024/11/30</div>
 		<div class="text">
 			<p>2024/11/30までの艦娘データ追加</p>
